--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "jest.config.js"
+    "jest.config.js",
+    "__tests__/Card.test.jsx"
   ],
   "exclude": ["node_modules"]
 }
